--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
+        android:width="300dp"
         android:text="Kill Bill"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -26,22 +27,17 @@
         android:layout_below="@id/Base"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="5dp"
-        android:text="Search" />
+        android:backgroundTint="#008c00"
+        android:text="Cerca" />
 
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/buttonToSearch"
-        android:layout_centerHorizontal="true">
-
-        <TextView
-            android:id="@+id/Results"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:text="Loading"/>
-    </ScrollView>
+    <GridView
+        android:id="@+id/GridView"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_below="@+id/buttonToSearch"
+        android:numColumns="3"
+        android:stretchMode="columnWidth" />
 
 
 </RelativeLayout>
