--- a/app/src/main/res/layout/grid_item.xml
+++ b/app/src/main/res/layout/grid_item.xml
@@ -1,19 +1,18 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingStart="2dp"
+    android:paddingEnd="2dp">
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="5dp"
         android:adjustViewBounds="true"
-        android:scaleType="fitXY"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="26dp"
-
-        android:background="@color/black" />
+        android:background="@color/black"
+        android:contentDescription="Copertina Film"
+        android:scaleType="centerCrop" />
 
     <TextView
         android:id="@+id/textView"
@@ -23,10 +22,11 @@
         android:layout_alignStart="@+id/imageView"
         android:layout_alignEnd="@+id/imageView"
         android:layout_centerInParent="true"
+        android:layout_marginTop="-20sp"
+        android:alpha="0.9"
+        android:background="@color/black"
         android:gravity="center"
         android:paddingHorizontal="8dp"
-        android:background="@color/black"
         android:textColor="@android:color/white"
-        android:textStyle="bold"
         android:textSize="20sp" />
 </RelativeLayout>
