--- a/app/src/main/res/layout/activity_dettaglio_film.xml
+++ b/app/src/main/res/layout/activity_dettaglio_film.xml
@@ -81,7 +81,7 @@
         android:showDividers="middle">
 
         <ImageButton
-            android:id="@+id/button2"
+            android:id="@+id/buttonDelete"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginStart="10dp"
@@ -98,7 +98,7 @@
             android:visibility="invisible"/>
 
         <ImageButton
-            android:id="@+id/button3"
+            android:id="@+id/buttonSeen"
             android:layout_width="40dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -113,7 +113,7 @@
             android:visibility="invisible"/>
 
         <ImageButton
-            android:id="@+id/button4"
+            android:id="@+id/buttonOk"
             android:layout_width="40dp"
             android:layout_height="match_parent"
             android:layout_marginEnd="10dp"
