--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="unitn.app.MainActivity">
+    tools:context="unitn.app.HomePage">
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/MediaSelection"
