--- a/app/src/main/res/layout/activity_info_film.xml
+++ b/app/src/main/res/layout/activity_info_film.xml
@@ -22,8 +22,8 @@
 
     <ImageView
         android:id="@+id/poster"
-        android:layout_width="151dp"
-        android:layout_height="223dp"
+        android:layout_width="246dp"
+        android:layout_height="373dp"
         android:layout_below="@+id/titoloFilm"
         android:layout_alignParentStart="true"
         android:layout_marginStart="15dp"
@@ -37,9 +37,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="154dp"
-        android:layout_marginBottom="71dp"
+        android:layout_marginStart="140dp"
+        android:layout_marginEnd="140dp"
+        android:layout_marginBottom="67dp"
         android:backgroundTint="#008c00"
         android:text="Aggiungi" />
 
