--- a/app/src/main/res/layout/activity_info_film.xml
+++ b/app/src/main/res/layout/activity_info_film.xml
@@ -26,7 +26,8 @@
         android:layout_height="373dp"
         android:layout_below="@+id/titoloFilm"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="15dp"
+        android:layout_alignParentEnd="true"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="15dp"
         app:layout_constraintTop_toBottomOf="@+id/titoloFilm"
         tools:layout_editor_absoluteX="16dp"
