--- a/app/src/main/res/layout/activity_ricerca.xml
+++ b/app/src/main/res/layout/activity_ricerca.xml
@@ -14,7 +14,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
         android:width="300dp"
-        android:text="Kill Bill"
+        android:text="Pippo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
