--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -37,26 +37,18 @@
         android:numColumns="3"
         android:stretchMode="columnWidth" />
 
-    <!--    <Button-->
-    <!--        android:id="@+id/goToSearchMediaButton"-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="75dp"-->
-    <!--        android:layout_below="@+id/MediaSelection"-->
-    <!--        android:layout_alignParentEnd="true"-->
-    <!--        android:layout_marginTop="593dp"-->
-    <!--        android:layout_marginEnd="12dp"-->
-    <!--        android:backgroundTint="#008c00"-->
-    <!--        android:text="Aggiungi" />-->
 
     <ImageButton
         android:id="@+id/goToSearchMediaButton"
-        android:layout_width="92dp"
-        android:layout_height="103dp"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="29dp"
-        android:layout_marginBottom="10dp"
-        android:backgroundTint="@color/white"
+        android:layout_marginBottom="20dp"
+        android:background="@null"
+        android:paddingHorizontal="15dp"
+        android:paddingVertical="15dp"
         android:scaleType="fitCenter"
         android:src="@drawable/lente_dingrandimento" />
 
