--- a/app/src/main/res/layout/activity_aggiungi_film.xml
+++ b/app/src/main/res/layout/activity_aggiungi_film.xml
@@ -22,24 +22,52 @@
 
     <ImageView
         android:id="@+id/poster"
-        android:layout_width="246dp"
-        android:layout_height="373dp"
+        android:layout_width="200dp"
+        android:layout_height="300dp"
         android:layout_below="@+id/titoloFilm"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_centerHorizontal="true"
         android:layout_marginTop="15dp"
-        app:layout_constraintTop_toBottomOf="@+id/titoloFilm"
-        tools:layout_editor_absoluteX="16dp"
+        android:layout_centerHorizontal="true"
         tools:srcCompat="@drawable/missing_poster" />
+
+
+    <LinearLayout
+        android:id="@+id/LayoutInfoFilm"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/poster"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginTop="12dp"
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@+id/poster">
+
+        <TextView
+            android:id="@+id/HeaderInfoMedia"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Sinossi"
+            android:textSize="23sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/sinossiText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            android:alpha="0.6"
+            android:text="@string/lorem_ipsum_1"
+            android:textColor="@color/black"
+            android:textSize="16sp" />
+
+    </LinearLayout>
 
     <Button
         android:id="@+id/addFilm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="67dp"
         android:layout_centerHorizontal="true"
+        android:layout_marginBottom="67dp"
         android:backgroundTint="#008c00"
         android:text="Aggiungi" />
 
