--- a/app/src/main/res/layout/activity_dettaglio_film.xml
+++ b/app/src/main/res/layout/activity_dettaglio_film.xml
@@ -20,37 +20,74 @@
         android:textStyle="bold"
         android:typeface="monospace" />
 
-    <ImageView
-        android:id="@+id/poster"
-        android:layout_width="150dp"
-        android:layout_height="228dp"
+    <LinearLayout
+        android:id="@+id/posterAndInfo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/titoloFilm"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="15dp"
+        android:layout_marginStart="6dp"
         android:layout_marginTop="15dp"
+        android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@+id/titoloFilm"
-        tools:layout_editor_absoluteX="16dp"
-        tools:srcCompat="@drawable/missing_poster" />
+        tools:layout_editor_absoluteX="16dp">
+
+
+        <ImageView
+            android:id="@+id/poster"
+            android:layout_width="170dp"
+            android:layout_height="260dp"
+            android:layout_below="@+id/titoloFilm"
+            android:contentDescription="Poster Image"
+            tools:srcCompat="@drawable/missing_poster" />
+
+        <LinearLayout
+            android:id="@+id/LayoutInfoFilm"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/HeaderInfoMedia"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Sinossi"
+                android:textSize="23sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/sinossiText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="10dp"
+                android:alpha="0.6"
+                android:text="@string/lorem_ipsum_1"
+                android:textColor="@color/black"
+                android:textSize="16sp" />
+        </LinearLayout>
+    </LinearLayout>
 
     <TextView
-        android:id="@+id/textView3"
-        android:layout_width="281dp"
-        android:layout_height="55dp"
-        android:layout_below="@+id/poster"
+        android:id="@+id/DoveVederloText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/posterAndInfo"
         android:layout_alignParentStart="true"
         android:layout_marginStart="14dp"
         android:layout_marginTop="22dp"
         android:text="Dove Vederlo"
         android:textSize="34sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@+id/poster"
+        app:layout_constraintTop_toBottomOf="@id/posterAndInfo"
         tools:layout_editor_absoluteX="16dp" />
 
     <LinearLayout
         android:id="@+id/plaformList"
-        android:layout_width="345dp"
+        android:layout_width="wrap_content"
         android:layout_height="48dp"
-        android:layout_below="@+id/textView3"
+        android:layout_below="@+id/DoveVederloText"
         android:layout_alignParentStart="true"
         android:layout_marginStart="14dp"
         android:layout_marginTop="15dp"
@@ -63,7 +100,7 @@
         android:layout_below="@+id/plaformList"
         android:layout_alignParentStart="true"
         android:layout_marginStart="14dp"
-        android:layout_marginTop="19dp"
+        android:layout_marginTop="10dp"
         android:showText="true"
         android:text="In Locale"
         android:textSize="20sp"
