--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -5,7 +5,8 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="unitn.app.HomePage">
+    tools:context="unitn.app.HomePage"
+    android:background="#B5F1F1F1">
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/MediaSelection"
@@ -35,7 +36,8 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/MediaSelection"
         android:numColumns="3"
-        android:stretchMode="columnWidth" />
+        android:stretchMode="columnWidth"
+        />
 
 
     <ImageButton
