--- a/app/src/main/res/layout/activity_aggiungi_film.xml
+++ b/app/src/main/res/layout/activity_aggiungi_film.xml
@@ -25,19 +25,19 @@
         android:layout_width="200dp"
         android:layout_height="300dp"
         android:layout_below="@+id/titoloFilm"
-        android:layout_marginTop="15dp"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="15dp"
         tools:srcCompat="@drawable/missing_poster" />
 
 
     <LinearLayout
         android:id="@+id/LayoutInfoFilm"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_below="@+id/poster"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginHorizontal="10dp"
         android:layout_marginTop="12dp"
+        android:layout_marginBottom="140dp"
         android:orientation="vertical"
         app:layout_constraintTop_toBottomOf="@+id/poster">
 
@@ -52,7 +52,7 @@
         <TextView
             android:id="@+id/sinossiText"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_marginEnd="10dp"
             android:alpha="0.6"
             android:text="@string/lorem_ipsum_1"
