--- a/app/src/main/res/layout/activity_dettaglio_film.xml
+++ b/app/src/main/res/layout/activity_dettaglio_film.xml
@@ -44,7 +44,7 @@
         <LinearLayout
             android:id="@+id/LayoutInfoFilm"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:orientation="vertical">
@@ -60,11 +60,12 @@
             <TextView
                 android:id="@+id/sinossiText"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginEnd="10dp"
                 android:alpha="0.6"
                 android:text="@string/lorem_ipsum_1"
                 android:textColor="@color/black"
+                android:scrollbars = "vertical"
                 android:textSize="16sp" />
         </LinearLayout>
     </LinearLayout>
