--- a/app/src/main/res/layout/activity_ricerca.xml
+++ b/app/src/main/res/layout/activity_ricerca.xml
@@ -1,30 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="unitn.app.HomePage">
+    tools:context="unitn.app.HomePage"
+    >
 
     <EditText
-        android:id="@+id/Base"
-        android:layout_width="wrap_content"
+        android:id="@+id/searchBar"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
-        android:width="300dp"
-        android:text="Pippo"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:inputType="text"
+        android:text="Kill Bill"
+        tools:ignore="LabelFor, Autofill" />
 
     <Button
         android:id="@+id/buttonToSearch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/Base"
+        android:layout_below="@id/searchBar"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="5dp"
         android:backgroundTint="#008c00"
