--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,19 +1,12 @@
 <resources>
-    <!-- Base application theme. -->
-    <style name="Base.Theme.Test" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
-    </style>
+    <style name="Base.Theme.Test" parent="Theme.Material3.DayNight.NoActionBar"/>
 
     <style name="Theme.Test" parent="Base.Theme.Test" />
 
     <style name="SCBSwitch" parent="Theme.AppCompat.Light">
-        <!-- active thumb & track color (30% transparency) -->
         <item name="colorControlActivated">#14A315</item>
-
-        <!-- inactive thumb color -->
         <item name="colorSwitchThumbNormal">#f1f1f1</item>
-        <!-- inactive track color (30% transparency) -->
         <item name="android:colorForeground">#42221f1f</item>
     </style>
+
 </resources>
