--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -13,35 +13,52 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#008c00"
+        app:tabIconTint="#D6000A00"
         app:tabIndicatorColor="#DCA8FF2F"
         app:tabIndicatorFullWidth="true"
         app:tabIndicatorHeight="4dp"
-        app:tabIconTint="#D6000A00"
         app:tabInlineLabel="true"
-        app:tabTextColor="#CDFFFFFF"/>
+        app:tabTextColor="#CDFFFFFF" />
 
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/pager"
-        android:layout_below="@+id/MediaSelection"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_below="@+id/MediaSelection" />
 
 
     <ImageButton
         android:id="@+id/goToSearchMediaButton"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="29dp"
         android:layout_marginBottom="20dp"
-        android:background="@null"
+        android:background="@drawable/circle"
+        android:backgroundTint="#008c00"
+        android:contentDescription="Aggiungi un nuovo media"
         android:paddingHorizontal="15dp"
         android:paddingVertical="15dp"
         android:scaleType="fitCenter"
-        android:src="@drawable/lente_dingrandimento"
-        android:contentDescription="Aggiungi un nuovo media" />
+        android:src="@drawable/lente_dingrandimento" />
+
+    <ImageButton
+        android:id="@+id/goToProfile"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="29dp"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/circle"
+        android:backgroundTint="#008c00"
+        android:contentDescription="Vai a pagina del profilo"
+        android:paddingHorizontal="15dp"
+        android:paddingVertical="15dp"
+        android:scaleType="fitCenter"
+        android:src="@drawable/user_pfp" />
 
 
 </RelativeLayout>
