--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -41,18 +41,19 @@
         android:layout_marginHorizontal="100dp"
         android:layout_marginVertical="100dp"
         android:backgroundTint="#008c00"
-        android:text="Entra"
-        android:textSize="20sp" />
+        android:text="Login"
+        android:textSize="16sp" />
 
     <Button
         android:id="@+id/signInButton"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:width="400dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginHorizontal="100dp"
         android:layout_marginBottom="60dp"
         android:backgroundTint="#008c00"
-        android:text="Crea un nuovo account"
-        android:textSize="18sp" />
+        android:text="Crea Account"
+        android:textSize="16sp" />
 </RelativeLayout>
