--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -12,7 +12,7 @@
         android:id="@+id/MediaSelection"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#008c00"
+        android:background="@color/Verde"
         app:tabIconTint="#D6000A00"
         app:tabIndicatorColor="#DCA8FF2F"
         app:tabIndicatorFullWidth="true"
@@ -37,7 +37,7 @@
         android:layout_marginEnd="29dp"
         android:layout_marginBottom="20dp"
         android:background="@drawable/circle"
-        android:backgroundTint="#008c00"
+        android:backgroundTint="@color/Verde"
         android:contentDescription="Aggiungi un nuovo media"
         android:paddingHorizontal="15dp"
         android:paddingVertical="15dp"
@@ -53,7 +53,7 @@
         android:layout_marginStart="29dp"
         android:layout_marginBottom="20dp"
         android:background="@drawable/circle"
-        android:backgroundTint="#008c00"
+        android:backgroundTint="@color/Verde"
         android:contentDescription="Vai a pagina del profilo"
         android:paddingHorizontal="15dp"
         android:paddingVertical="15dp"
