--- a/app/src/main/res/layout/activity_profilo.xml
+++ b/app/src/main/res/layout/activity_profilo.xml
@@ -152,8 +152,10 @@
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="40dp"
         android:layout_marginBottom="32dp"
-        android:background="@color/white"
-        android:contentDescription="Vai a homepage"
+        android:background="@drawable/circle"
+        android:backgroundTint="#008c00"
+        android:contentDescription="Salva e vai a homepage"
+        android:paddingVertical="6dp"
         android:scaleType="fitCenter"
         android:src="@drawable/checkmark" />
 </RelativeLayout>
