--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="Verde">#ff008c00</color>
+    <color name="Viola">#ff852deb</color>
+    <color name="Azzurro">#ff2d95eb</color>
 </resources>
